--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<script type="text/javascript" src="script.js"></script>
 </head>
 <body onload="init();">
-	<canvas id="canvas" width="1200" height="800" style="border:1px solid #000000;background-color:black;"></canvas>
-	<div id="output"></div>
+	<canvas id="canvas" width="1200" height="800" style="background-color:black;float:left;"></canvas>
+	<div id="output" style="float:left;"></div>
 </body>
 </html>
