--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 </head>
 <body onload="init();">
 	<canvas id="canvas" width="1200" height="800" style="background-color:black;float:left;"></canvas>
+	<div id="info" style="float:left;word-wrap:break-word;">
+		Controls:<br>
+		W, A, S, D to move<br>
+		Mouse to aim<br>
+		Left click to shoot
+	</div>
 	<div id="output" style="float:left;"></div>
 </body>
 </html>
