--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title id="title">Space Shooter</title>
 	<meta charset="utf-8">
 	<style>
-		image, canvas {
+		body {
 		    user-select: none;
 			draggable : false;
 		    -ms-user-select: none;
@@ -22,7 +22,7 @@
 </head>
 <body onload="init();">
 	<canvas id="canvas" width="1200" height="800" style="background-color:black;float:left;"></canvas>
-	<div id="info" style="float:left;word-wrap:break-word;user-select:none;">
+	<div id="info" style="float:left;word-wrap:break-word;">
 		Controls:<br>
 		W, A, S, D to move<br>
 		Mouse to aim<br>
