--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
 		W, A, S, D to move<br>
 		Mouse to aim<br>
 		Left click to shoot<br>
+		Switching Weapons:<br>
+		1 - Beam<br>
+		2 - Splitter<br>
+		3 - Heavy<br>
+		4 - Gatling<br>
 		+ - to zoom in and out
 	</div>
 	<div id="output" style="float:left;"></div>
