--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 		2 - Splitter<br>
 		3 - Heavy<br>
 		4 - Gatling<br>
+		5 - Purifier<br>
 		+ - to zoom in and out
 	</div>
 	<div id="output" style="float:left;"></div>
