--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		    -webkit-user-drag: none;
 		}
 	</style>
+	<script type="text/javascript" src="howler.js"></script>
 
 	<script type="text/javascript" src="Box2D.js"></script>
 
@@ -32,7 +33,7 @@
 		2 - Splitter<br>
 		3 - Heavy<br>
 		4 - Gatling<br>
-		5 - Purifier<br>
+		5 - Incinerator<br>
 		+ - to zoom in and out
 	</div>
 	<div id="output" style="float:left;"></div>
