--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 <body onload="init();">
 	<canvas id="canvas" width="1200" height="800" style="background-color:black;float:left;"></canvas>
 	<div id="info" style="float:left;word-wrap:break-word;">
+		Version:<br>
+		<div id="version"><br></div>
 		Controls:<br>
 		W, A, S, D to move<br>
 		Mouse to aim<br>
