--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
 		Controls:<br>
 		W, A, S, D to move<br>
 		Mouse to aim<br>
-		Left click to shoot<br>
+		Spacebar to shoot<br>
 		Switching Weapons:<br>
 		1 - Beam<br>
 		2 - Splitter<br>
 		3 - Heavy<br>
 		4 - Gatling<br>
 		5 - Incinerator<br>
+		Enter thesupersecretcode<br>to activate Omega weapons!<br>
 		+ - to zoom in and out
 	</div>
 	<div id="output" style="float:left;"></div>
