--- a/index.html
+++ b/index.html
@@ -3,42 +3,16 @@
 <head>
 	<title id="title">Space Shooter</title>
 	<meta charset="utf-8">
-	<style>
-		body {
-		    user-select: none;
-			draggable : false;
-		    -ms-user-select: none;
-		    -webkit-user-select: none;
-		    -khtml-user-select: none;
-		    -moz-user-select: none;
-		    -webkit-touch-callout: none;
-		    -webkit-user-drag: none;
-		}
-	</style>
+	<style>body {user-select: none;draggable : false;-ms-user-select: none;-webkit-user-select: none;-khtml-user-select: none;-moz-user-select: none;-webkit-touch-callout: none;-webkit-user-drag: none;}</style>
 	<script type="text/javascript" src="howler.js"></script>
-
 	<script type="text/javascript" src="Box2D.js"></script>
-
 	<script type="text/javascript" src="script.js"></script>
 </head>
 <body onload="init();">
 	<canvas id="canvas" width="1200" height="800" style="background-color:black;float:left;"></canvas>
 	<div id="info" style="float:left;word-wrap:break-word;">
-		Version:<br>
 		<div id="version"><br></div>
-		Controls:<br>
-		W, A, S, D to move<br>
-		Mouse to aim<br>
-		Spacebar to shoot<br>
-		Switching Weapons:<br>
-		1 - Beam<br>
-		2 - Splitter<br>
-		3 - Heavy<br>
-		4 - Gatling<br>
-		5 - Incinerator<br>
-		Enter thesupersecretcode<br>to activate Omega weapons!<br>
-		+ - to zoom in and out
-	</div>
+		<div id="controls"></div></div>
 	<div id="output" style="float:left;"></div>
 </body>
 </html>
